# llm-wiki

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.en.md  README.md  SOUL.md  USER.md.example  agent.md  create_analysis_note.py  gateway.toml  gateway.toml.example  gemini.md  im.toml  im.toml.example  imagen.toml  imagen.toml.example  pyproject.toml
.obsidian/: app.json  core-plugins.json
docs/: NOTEBOOKLM_FIRST_ROADMAP.md  PRODUCT_EVAL.md  SETUP.en.md  SETUP.md
raw/: 20260426-035707-http-raw.md  20260426-035707-https-en-wikipedia-org-wiki-markdown.md  20260426-035709-test-upload.md  20260426-035709-test-upload.txt  20260426-035942-1-1.md  20260426-040128-https-en-wikipedia-org-wiki-https.md  20260426-040140-123.md
tests/: __init__.py  test_arxiv_task.py  test_autopilot_config.py  test_bm25_index.py  test_chat_task.py  test_cli.py  test_cli_context.py  test_common_language.py  test_daemon_indexer_wiring.py  test_daemon_logging.py  test_data_table_task.py  test_doctor.py  test_gateway_cli.py  test_gateway_config.py  test_gemini_middleware.py  test_gen_image_task.py  test_generation_tasks.py  test_git_autopilot.py  test_git_autopilot_push.py  test_git_autopilot_safety.py  test_graph_audit.py  test_im_common.py  test_im_config.py  test_im_http.py  test_im_telegram.py  test_imagen_cli.py  test_imagen_client.py  test_infographic_task.py  test_ingest.py  test_label_watcher.py  test_litellm_config.py  test_litellm_config_with_rag.py  test_notebook_index.py  test_notebook_lookup.py  test_notebook_workspaces.py  test_notecraft.py  test_notecraft_parse.py  test_r2.py  (+18 more)
(+61 files in other folders)
