[project]
name = "llmwiki"
version = "0.1.0"
description = "LLM-Wiki v2.0 — Obsidian Vault + Git autopilot + Notecraft second brain OS"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "watchdog>=4",
    "python-frontmatter>=1.1",
    "pydantic>=2.7",
    "rich>=13",
    "litellm[proxy]>=1.55",
    "httpx[socks]>=0.28.1",
    "fastembed>=0.4",
    "chromadb>=0.5",
    "fastapi>=0.115",
    "trafilatura>=1.12",
    "python-telegram-bot>=21.6",
]

[project.scripts]
wikictl = "llmwiki.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmwiki"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring real external services",
    "slow: slow tests (model downloads, heavy embeddings)",
]
